[project]
name = "industrial-phd-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Viktor Stenby Johansson", email = "viktor.stenby@vippsmobilepay.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
industrial-phd-tools = "industrial_phd_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
